# design_patterns

./: README.md  pyproject.toml
facade/: facade.py
factory/: abstract_factory.py  factory.py  factory_method.py
iterator/: iterator.py  main.py
iterator/module/: aggregate.py  compact_disc.py
observer/: main.py
observer/module/: generator.py  observer.py
singleton/: singleton.py
