[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = "デザインパターンの勉強のリポジトリ"
authors = ["ryu.aizawa <zeku.bushinryu38@gmail.com>"]
readme = "README.md"
packages = [{include = "design_patterns"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
